Added support for Java 21 Removed Pico Containers